# eink_frame

./: .gitignore  README.md  einkframe.py  pyproject.toml  requirements.txt  run_dev.py  run_production.py
config/: settings.yaml
data/: einkframe.db
docs/: IMPLEMENTATION_PLAN.md  SPEC.md
scripts/: ap_recovery.sh  check_wittypi.py  einkframe.service  install_recovery.sh  install_service.sh  preview_eink.py  preview_web.py
src/: button.py  config.py  database.py  frame_runner.py  image_processor.py  main.py  photo_selector.py  power_manager.py  startup.py  state_machine.py  status_display.py
src/display/: __init__.py  base.py
src/display/epd13in3e/: __init__.py  config.py  driver.py
src/display/epd7in3e/: __init__.py  config.py  driver.py
src/photo_source/: base.py  local.py
src/web/: app.py  routes.py
src/web/templates/: captive.html  index.html
src/wifi/: __init__.py  ap_mode.py  captive_portal.py  manager.py  recovery.py
tests/: conftest.py  test_database.py  test_local_photo_source.py  test_processor_visual.py  test_state_machine.py
