[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eink-frame"
version = "0.1.0"
description = "E-Ink Photo Frame with Raspberry Pi Zero 2 W"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your@email.com"}
]

dependencies = [
    "Pillow>=10.0.0",
    "FastAPI>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "Jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "PyYAML>=6.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
pi = [
    "RPi.GPIO>=0.7.0",
    "spidev>=3.6",
    "smbus2>=0.4.0",
    "gpiozero>=2.0",
]
google = [
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.scripts]
eink-frame = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
